@@ -1,0 +1,25 @@
+Nitrobenzoic acid
+ OpenBabel10240915282D
+
+  8  8  0  0  0  0  0  0  0  0999 V2000
+    0.0000    0.0000    0.0000 *   0  0  0  0  0
+    0.0000    0.0000    0.0000 C   0  0  0  0  0
+    0.0000    0.0000    0.0000 C   0  0  0  0  0
+    0.0000    0.0000    0.0000 C   0  0  0  0  0
+    0.0000    0.0000    0.0000 C   0  0  0  0  0
+    0.0000    0.0000    0.0000 C   0  0  0  0  0
+    0.0000    0.0000    0.0000 C   0  0  0  0  0
+    0.0000    0.0000    0.0000 *   0  0  0  0  0
+  1  2  1  0  0  0
+  2  7  1  0  0  0
+  2  3  2  0  0  0
+  3  4  1  0  0  0
+  4  5  2  0  0  0
+  5  6  1  0  0  0
+  6  7  2  0  0  0
+  7  8  1  0  0  0
+A    1
+NO2
+A    8
+COOH
+M  END
